<resources>
    <string name="app_name">SheetCount</string>
    <string name="startButton">Compter</string>
    <string name="textNumberCounted">Nombre compté :</string>
    <string name="valueCounted">0</string>
    <string name="information">i</string>
    <string name="addedQuantity">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="total">Total :</string>
    <string name="total_value">0</string>
    <string name="image_viewer">Image viewer</string>
    <string name="takePict">Prendre une photo</string>
    <string name="next">Suivant</string>
    <string name="choosePict">Choisir une photo</string>
    <string name="summary">Résumé</string>
    <string name="textAdd">Ajout :</string>
    <string name="infoTitle">Informations</string>
    <string name="infoText">Notice d\'utilisation :\n\nLorsque vous prenez une photo en mode portrait ou paysage veillez à ce que les tôles soient au milieu de la photo.\n\nSuite à la prise d\'une photo, un seuil de gris va être automatiquement déterminé. Si le résultat ne vous convient pas vous pouvez, à l\'aide du slider, changer le seuil afin d\'obtenir un meilleur résultat.\n\nDes points rouges et verts seront dessinés sur la photo afin de montrer les tôles détectées. Si vous ne les voyez pas bien vous pouvez zoomer sur l\'image avec vos doigts. </string>
    <string name="back">Retour</string>
    <string name="finish">Terminer</string>
    <string name="totalText">Total : </string>
    <string name="totalSheetText">0</string>
    <string name="finishTitle">Terminer de compter</string>
    <string name="finishText">Êtes-vous sûr de vouloir terminer de compter ?\nCette action est irréversible.</string>
    <string name="finishPositiveButton">Terminer</string>
    <string name="finishNegativeButton">Annuler</string>
    <string name="errorImportTitle">Erreur</string>
    <string name="errorImportText">Une erreur est apparue lors du chargement de l\'image :\n</string>
    <string name="splash_image">splash_image</string>
    <string name="about_button">À propos</string>
    <string name="about_title">À propos de SheetCount</string>
    <string name="about_text">SheetCount V%1$s\n© %2$d\n\nApplication développée par Léon Collén et Axel Trémaudant, étudiants à l\'ENSIBS.\nLe code de l\'application est disponible à ce lien : https://github.com/Axel927/SheetCount</string>
    <string name="photo_name_title">Nom de la photo</string>
    <string name="photo_name_text">Écrire le nom de la photo</string>
    <string name="photo_name_positive_btn">Valider</string>
    <string name="photo_name_negative_btn">Annuler</string>
    <string name="photo_default_name">"Photo "</string>
    <string name="photo_name_separator">" : "</string>
    <string name="name_count_title">Nombre de tôles comptées</string>
    <string name="name_count_text">%1$d tôles ont été comptées avec le nom : %2$s.</string>
    <string name="error_modify_count_title">Erreur</string>
    <string name="error_modify_count_text">Seuls les nombres entiers sont autorisés.</string>
    <string name="export_btn_name">Exporter les données</string>
    <string name="export_error_title">Erreur</string>
    <string name="export_error_text">Une erreur a eu lieu durant l\'exportation :\n</string>
    <string name="email_error_title">Erreur</string>
    <string name="email_error_text">Application d\'email non trouvée.</string>
    <string name="email_subject">Comptage de tôles du</string>
    <string name="column_name">Nom;Quantité\n</string>
    <string name="settings">P</string>
    <string name="default_value_threshold">140</string>
    <string name="csv_file_text">Nom fichier : </string>
    <string name="csv_file_name">comptage_{date}</string>
    <string name="csv_file_path_btn">Chemin</string>
    <string name="csv_file_path">/storage/emulated/0/Download</string>
    <string name="email_address_text">Destinataire : </string>
    <string name="email_address">example@email.com</string>
    <string name="email_object_text">Objet :</string>
    <string name="email_object">Comptage de tôles du {date}</string>
    <string name="email_text">Contenu :</string>
    <string name="email_text_content">Bonjour,\n\nVoici en pièce jointe le comptage de tôles du {date}.\nCordialement,\n\nSheetCount</string>
    <string name="end_settings">Terminer</string>
    <string name="reset_btn">Rétablir</string>
    <string name="error_path_title">Erreur</string>
    <string name="error_path_text">Le dossier choisi pour le fichier de sauvegarde des données n\'existe pas. Veuillez modifier le chemin.</string>
    <string name="settings_text">Paramètres</string>
    <string name="settings_button">engrenage</string>
</resources>