<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.SummaryActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/about"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:backgroundTint="@color/info_background"
                android:text="@string/about_button"
                android:textSize="11sp"
                app:cornerRadius="20dp" />

            <Space
                android:layout_width="32dp"
                android:layout_height="0dp"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/totalText"
                android:textSize="24sp"
                android:translationY="16dp" />

            <TextView
                android:id="@+id/totalCounted"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/totalSheetText"
                android:textSize="24sp"
                android:translationY="16dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/settingsBtn"
                android:layout_width="0dp"
                android:layout_height="39dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="2"
                android:background="@color/activity_background"
                android:backgroundTint="@color/activity_background"
                android:contentDescription="engrenage"
                android:src="@drawable/engrenage"
                android:text="@string/settings"
                app:cornerRadius="20dp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <ListView
            android:id="@+id/photoListView"
            android:layout_width="285dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:scrollbars="vertical">

        </ListView>

        <TextView
            android:id="@+id/settingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/settings_text"
            android:textSize="24sp" />

        <TableLayout
            android:id="@+id/settingsTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:stretchColumns="0,1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/csv_file_text"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/csvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/csv_file_name"
                    android:textSize="16sp"
                    tools:ignore="LabelFor" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/pathBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/button_background"
                    android:text="@string/csv_file_path_btn"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/editTextPath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/csv_file_path"
                    tools:ignore="LabelFor"
                    android:textSize="16sp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address_text"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:text="@string/email_address"
                    tools:ignore="LabelFor"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_object_text"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/objectMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/email_object"
                    tools:ignore="LabelFor"
                    android:textSize="16sp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_text"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/mailContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:text="@string/email_text_content"
                    tools:ignore="LabelFor"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/resetBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/button_background"
                    android:text="@string/reset_btn"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/endSettingsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/button_background"
                    android:gravity="center"
                    android:text="@string/end_settings"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/exportBtn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:backgroundTint="@color/button_background"
                android:text="@string/export_btn_name"
                android:textSize="16sp"
                tools:ignore="InefficientWeight" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backBtn"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_weight="0"
                android:backgroundTint="@color/button_background"
                android:text="@string/back"
                android:textSize="16sp"
                tools:ignore="NestedWeights" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/finishBtn"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0"
                android:backgroundTint="@color/button_background"
                android:text="@string/finish"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>