<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5C1C1"
    android:orientation="vertical"
    tools:context=".controller.MainActivity">

    <LinearLayout
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/countedTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="#6AC5C1C1"
            android:backgroundTint="#6AC5C1C1"
            android:backgroundTintMode="add"
            android:text="@string/textNumberCounted"
            android:textAlignment="gravity"
            android:textSize="20sp"
            android:translationY="-16dp" />

        <TextView
            android:id="@+id/valueCountedTextView"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="#C5C1C1"
            android:text="@string/valueCounted"
            android:textSize="24sp"
            android:translationY="-16dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/infoBtn"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#5A5956"
            android:text="@string/information"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:cornerRadius="100dp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#C5C1C1"
            android:text="@string/textAdd"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addedEditTextNumberDecimal"
            android:layout_width="29dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:autofillHints=""
            android:background="#C5C1C1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@string/addedQuantity"
            tools:ignore="LabelFor,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="12dp"
            android:layout_height="64dp">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="29dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/addSheetBtn"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="2dp"
                android:width="16dp"
                android:height="16dp"
                android:backgroundTint="#328136"
                android:padding="0dp"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/plus"
                android:textAlignment="gravity"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/rmSheetBtn"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="2dp"
                android:backgroundTint="#CD3232"
                android:padding="1dp"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="84dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="#C5C1C1"
            android:text="@string/total"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/valueTotalTextView"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#C5C1C1"
            android:text="@string/total_value"
            android:textSize="34sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/image_viewer"
        android:translationZ="-10dp"
        app:srcCompat="@drawable/launch_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/takePictBtn"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_marginStart="0dp"
                android:backgroundTint="#193BEC"
                android:text="@string/takePict"
                android:textSize="16sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="0dp"
                android:backgroundTint="#193BEC"
                android:text="@string/next"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/galleryBtn"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:backgroundTint="#193BEC"
                android:text="@string/choosePict"
                android:textSize="16sp"
                tools:ignore="NestedWeights" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/summaryBtn"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="0dp"
                android:layout_weight="0"
                android:backgroundTint="#193BEC"
                android:text="@string/summary"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>